--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,6 @@ android {
 }
 
 dependencies {
-    def nav_version = "2.1.0"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -43,14 +42,21 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    // Jet-pack Navigation Component
+    implementation "androidx.navigation:navigation-fragment-ktx:2.1.0"
+    implementation "androidx.navigation:navigation-ui-ktx:2.1.0"
 
+    // Material Design Library
     implementation 'com.google.android.material:material:1.0.0'
 
+    // View Pager Dot Indicator
     implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
 
+    // Retrofit Library
     implementation "com.squareup.retrofit2:retrofit:2.6.1"
     implementation "com.squareup.retrofit2:converter-gson:2.6.1"
     implementation "com.squareup.retrofit2:retrofit-mock:2.6.1"
+
+    // Shopping Cart Library
+    implementation 'com.carteasy.v1.lib:carteasy:0.0.5'
 }
