Login/SignUp API Implementation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,8 @@ dependencies {
 
     // Custom EditText
     implementation 'com.libizo:customedittext:1.0.6'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 }
