--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,11 @@ dependencies {
 
     // Material Rating Bar
     implementation 'me.zhanghai.android.materialratingbar:library:1.3.3'
+
+    // Firebase
+    implementation 'com.google.firebase:firebase-analytics:17.2.1'
+    implementation 'com.google.firebase:firebase-storage-ktx:19.1.0'
+    implementation 'com.google.firebase:firebase-database:19.2.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
